--- a/redes.css
+++ b/redes.css
@@ -11,11 +11,12 @@
 }
 
 img{
-    width: 100vw;
+    width: 100vw
 }
 
 a{
     display: block;
+    margin-top:-5px ;
     background-color: darkred;
     color: white;
     padding: 10px;
